Save before contact message attempt
moo

--- a/GoldenEagleOrganics/GoldenEagleOrganics.csproj
+++ b/GoldenEagleOrganics/GoldenEagleOrganics.csproj
@@ -44,6 +44,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="form.js" />
+    <Content Include="GEOPics\emailLogo.jpg" />
+    <Content Include="GEOPics\fblogo.jpg" />
     <Content Include="GEOPics\profile_blank.png" />
     <Content Include="goat.html" />
     <Content Include="hay.html" />
