Changed all services.html to about.html
moo

--- a/GoldenEagleOrganics/GoldenEagleOrganics.csproj
+++ b/GoldenEagleOrganics/GoldenEagleOrganics.csproj
@@ -72,7 +72,7 @@
     <Content Include="contact.html" />
     <Content Include="GEOPics\usdaorg.png" />
     <Content Include="beef.html" />
-    <Content Include="services.html" />
+    <Content Include="about.html" />
     <Content Include="products.html" />
     <Content Include="index.html" />
     <Content Include="js\bootstrap.js" />
