Added tons of site pics
moo

--- a/GoldenEagleOrganics/GoldenEagleOrganics.csproj
+++ b/GoldenEagleOrganics/GoldenEagleOrganics.csproj
@@ -44,8 +44,39 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="GEOPics\alfalfa02.jpg" />
+    <Content Include="GEOPics\alfalfa03.jpg" />
+    <Content Include="GEOPics\alfalfa04.jpg" />
+    <Content Include="GEOPics\alfalfa05.jpg" />
+    <Content Include="GEOPics\bodhi01.png" />
+    <Content Include="GEOPics\brian01.png" />
+    <Content Include="GEOPics\chicken01.jpg" />
+    <Content Include="GEOPics\chicken02.jpg" />
+    <Content Include="GEOPics\claudia01.png" />
+    <Content Include="GEOPics\custFarmServ02.jpg" />
+    <Content Include="GEOPics\custFarmServ03.jpg" />
+    <Content Include="GEOPics\custFarmServ04.jpg" />
+    <Content Include="GEOPics\custFarmServ05.jpg" />
     <Content Include="GEOPics\emailLogo.jpg" />
+    <Content Include="GEOPics\emily01.png" />
     <Content Include="GEOPics\fblogo.jpg" />
+    <Content Include="GEOPics\geo04.jpg" />
+    <Content Include="GEOPics\geo05.jpg" />
+    <Content Include="GEOPics\goat02.jpg" />
+    <Content Include="GEOPics\goat03.jpg" />
+    <Content Include="GEOPics\goat04.jpg" />
+    <Content Include="GEOPics\goat05.jpg" />
+    <Content Include="GEOPics\gus01.png" />
+    <Content Include="GEOPics\guy01.png" />
+    <Content Include="GEOPics\hay02.jpg" />
+    <Content Include="GEOPics\hay03.jpg" />
+    <Content Include="GEOPics\hay04.jpg" />
+    <Content Include="GEOPics\hay05.jpg" />
+    <Content Include="GEOPics\lamb02.jpg" />
+    <Content Include="GEOPics\lamb03.jpg" />
+    <Content Include="GEOPics\lamb04.jpg" />
+    <Content Include="GEOPics\lamb05.jpg" />
+    <Content Include="GEOPics\owners01.jpg" />
     <Content Include="GEOPics\profile_blank.png" />
     <Content Include="goat.html" />
     <Content Include="hay.html" />
