Finished converting to Bootstrap Casual Format
moo

--- a/GoldenEagleOrganics/GoldenEagleOrganics.csproj
+++ b/GoldenEagleOrganics/GoldenEagleOrganics.csproj
@@ -59,17 +59,18 @@
     <Content Include="GEOPics\alfalfa02.jpg" />
     <Content Include="GEOPics\alfalfa05.jpg" />
     <Content Include="GEOPics\blogPic01.jpg" />
+    <Content Include="GEOPics\bodhi01.jpg" />
     <Content Include="GEOPics\bodhi01.png" />
-    <Content Include="GEOPics\brian01.png" />
+    <Content Include="GEOPics\brian01.jpg" />
     <Content Include="GEOPics\chicken01.jpg" />
     <Content Include="GEOPics\chicken02.jpg" />
-    <Content Include="GEOPics\claudia01.png" />
+    <Content Include="GEOPics\claudia01.jpg" />
     <Content Include="GEOPics\custFarmServ02.jpg" />
     <Content Include="GEOPics\custFarmServ03.jpg" />
     <Content Include="GEOPics\custFarmServ04.jpg" />
     <Content Include="GEOPics\custFarmServ05.jpg" />
     <Content Include="GEOPics\emailLogo.jpg" />
-    <Content Include="GEOPics\emily01.png" />
+    <Content Include="GEOPics\emily01.jpg" />
     <Content Include="GEOPics\facebook-square2.png" />
     <Content Include="GEOPics\fblogo.jpg" />
     <Content Include="GEOPics\geo04.jpg" />
@@ -78,8 +79,7 @@
     <Content Include="GEOPics\goat03.jpg" />
     <Content Include="GEOPics\goat04.jpg" />
     <Content Include="GEOPics\goat05.jpg" />
-    <Content Include="GEOPics\gus01.png" />
-    <Content Include="GEOPics\guy01.png" />
+    <Content Include="GEOPics\gus01.jpg" />
     <Content Include="GEOPics\hay02.jpg" />
     <Content Include="GEOPics\hay03.jpg" />
     <Content Include="GEOPics\hay04.jpg" />
@@ -89,17 +89,14 @@
     <Content Include="GEOPics\lamb04.jpg" />
     <Content Include="GEOPics\lamb05.jpg" />
     <Content Include="GEOPics\mail2.png" />
+    <Content Include="GEOPics\nick01.jpg" />
     <Content Include="GEOPics\owners01.jpg" />
     <Content Include="GEOPics\profile_blank.png" />
+    <Content Include="GEOPics\vince01.jpg" />
     <Content Include="goat.html" />
     <Content Include="hay.html" />
     <Content Include="alfalfa.html" />
     <Content Include="farming.html" />
-    <Content Include="img\bg.jpg" />
-    <Content Include="img\intro-pic.jpg" />
-    <Content Include="img\slide-1.jpg" />
-    <Content Include="img\slide-2.jpg" />
-    <Content Include="img\slide-3.jpg" />
     <Content Include="index.html" />
     <Content Include="lamb.html" />
     <Content Include="GEOPics\beef01.jpg" />
@@ -118,15 +115,11 @@
     <Content Include="GEOPics\mail.png" />
     <Content Include="GEOPics\oretil.png" />
     <Content Include="GEOPics\placeholder.png" />
-    <Content Include="contact2.html" />
     <Content Include="GEOPics\usdaorg.png" />
     <Content Include="beef.html" />
-    <Content Include="about2.html" />
     <Content Include="obj\Debug\GoldenEagleOrganics.csproj.FileListAbsolute.txt" />
     <Content Include="obj\Debug\GoldenEagleOrganics.dll" />
     <Content Include="obj\Debug\GoldenEagleOrganics.pdb" />
-    <Content Include="products.html" />
-    <Content Include="index2.html" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\contact_me.js" />
