Changes with Brian
moo

--- a/GoldenEagleOrganics/GoldenEagleOrganics.csproj
+++ b/GoldenEagleOrganics/GoldenEagleOrganics.csproj
@@ -60,8 +60,9 @@
     <Content Include="GEOPics\alfalfa05.jpg" />
     <Content Include="GEOPics\blogPic01.jpg" />
     <Content Include="GEOPics\bodhi01.jpg" />
-    <Content Include="GEOPics\bodhi01.png" />
     <Content Include="GEOPics\brian01.jpg" />
+    <Content Include="GEOPics\geo09.gif" />
+    <Content Include="GEOPics\lambCuts.jpg" />
     <Content Include="GEOPics\chicken01.jpg" />
     <Content Include="GEOPics\chicken02.jpg" />
     <Content Include="GEOPics\claudia01.jpg" />
@@ -84,18 +85,20 @@
     <Content Include="GEOPics\hay03.jpg" />
     <Content Include="GEOPics\hay04.jpg" />
     <Content Include="GEOPics\hay05.jpg" />
+    <Content Include="GEOPics\IMG_1657.JPG" />
     <Content Include="GEOPics\lamb02.jpg" />
     <Content Include="GEOPics\lamb03.jpg" />
     <Content Include="GEOPics\lamb04.jpg" />
     <Content Include="GEOPics\lamb05.jpg" />
     <Content Include="GEOPics\mail2.png" />
-    <Content Include="GEOPics\nick01.jpg" />
-    <Content Include="GEOPics\owners01.jpg" />
+    <Content Include="GEOPics\meatTable.jpg" />
+    <Content Include="GEOPics\owners01.JPG" />
     <Content Include="GEOPics\profile_blank.png" />
+    <Content Include="GEOPics\staff01.jpg" />
+    <Content Include="GEOPics\steer01.jpg" />
     <Content Include="GEOPics\vince01.jpg" />
     <Content Include="goat.html" />
     <Content Include="hay.html" />
-    <Content Include="alfalfa.html" />
     <Content Include="farming.html" />
     <Content Include="index.html" />
     <Content Include="lamb.html" />
